--- a/frontend/react-app/package.json
+++ b/frontend/react-app/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
-    "react-router-dom": "^7.9.3"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.3",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
