--- a/frontend/react-app/package.json
+++ b/frontend/react-app/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.4",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
