feature(BatchModel): get production generated per day and implement test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     environment:
       - DJANGO_DEBUG=True
       - PYTHONUNBUFFERED=1
+      - DJANGO_SETTINGS_MODULE=BGProject.settings
 
   nginx:
     image: nginx:latest
