--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,9 +61,12 @@ services:
 
   frontend:
     build:
-      context: ./frontend/react-app
+      context: ./frontend/nextjs-app
     ports:
-      - "8090:90"
+      - "3000:3000"
+    environment:
+      - NEXT_PUBLIC_API_URL=http://backend:8000
+      - NEXT_PUBLIC_WS_URL=ws://backend:8000
     depends_on:
       - backend
 
@@ -72,31 +75,15 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     container_name: mqtt_subscriber
-    command: >
-      sh -c "python backend/dataSensor/MqttSub.py"
-    volumes:
-      - ./backend:/app
-    depends_on:
-      - backend
-      - mosquitto
-    environment:
-      - DJANGO_SETTINGS_MODULE=BGProject.settings
-
-  data_saver:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    container_name: data_saver
-    command: >
-      sh -c "python manage.py start_data_saver"
+    command: python run_mqtt_subscriber.py
     volumes:
       - ./backend:/app
     env_file:
       - ./backend/.env
     depends_on:
-      - db
-      - redis
       - backend
+      - mosquitto
+      - redis
     environment:
       - DJANGO_SETTINGS_MODULE=BGProject.settings
 
