--- a/nginx.conf
+++ b/nginx.conf
@@ -10,25 +10,49 @@ http {
         listen 80;
         server_name localhost;
 
-        # Servir archivos estáticos
+        # Servir archivos estáticos de Django
         location /static/ {
             alias /static/;
             expires 30d;
             add_header Cache-Control "public";
         }
 
-        # Proxy para Django/Daphne
-        location / {
+        # API Backend (Django)
+        location /api/ {
             proxy_pass http://backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+        }
 
-            # WebSocket support
+        # WebSocket para sensores
+        location /ws/ {
+            proxy_pass http://backend:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # Django Admin
+        location /admin/ {
+            proxy_pass http://backend:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Frontend (Next.js) - todo lo demás
+        location / {
+            proxy_pass http://frontend:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
